--- a/work.html
+++ b/work.html
@@ -70,7 +70,7 @@
     <section class="inbetween no-bottom work-info">
         <div class="container">
             <h1>Our work</h1>
-            <p>Below are a few selected projects that exhibit our core expertise in app and website design and development.</p>
+            <p>Below are a few selected projects that exhibit our core expertise in app and web creation.</p>
             <img src="assets/work-info.svg" class="bottom-img" />
         </div>
     </section>
@@ -119,7 +119,7 @@
             </div>
             <div class="contact">
                 <a href="mailto:animal57co@gmail.com" class="btn">Contact Us</a>
-                <p>24 Monument St., Wenham, MA 01984</p>
+                <p>24 Monument St. Wenham, MA 01984</p>
                 <p>
                     <span>Phone: (978) 491.0046</span>
                     <span>Fax: (978) 887.1099</span>
@@ -139,5 +139,15 @@
     </footer>
 
     <script type="text/javascript" src="scripts/site.js"></script>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-122987123-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-122987123-1');
+    </script>
+
 </body>
 </html>
