Minor edits, added Google Analytics,
Additional products will be added soon to this page. Another branch will be created to insert the work, and inner pages.

--- a/work.html
+++ b/work.html
@@ -104,6 +104,7 @@
 
     <section class="inbetween work-contact">
         <div class="container">
+            <h4>Additional Projects to be added soon! </h4>
             <h2>Got a project? Let’s discuss!</h2>
             <p>Contact us at animal57co@gmail.com</p>
             <br><br>
