--- a/index.html
+++ b/index.html
@@ -87,17 +87,27 @@
                     <div class="carousel-slide">
                         <img src="assets/carousel-artbeyond.png" />
                     </div>
+                    <div class="carousel-slide">
+                        <img src="assets/carousel-walksagain.png" />
+                    </div>
+                    <div class="carousel-slide">
+                        <img src="assets/carousel-curemap.png" />
+                    </div>
                     <a href="#" class="carousel-next"></a>
                 </div>
                 <div class="carousel-desc">
                     <p class="carousel-current"><span class="carousel-title">DreaMachine &ndash;</span> Access relaxed states of mind, creativity and even hallucinatory states.</p>
                     <p><span class="carousel-title">Bella Surfaces &ndash;</span> Over 20 years combined experience installing custom surfaces.</p>
                     <p><span class="carousel-title">ArtBeyond &ndash;</span> An ongoing art exhibit that displays curated work online and in galleries.</p>
+                    <p><span class="carousel-title">MassWalksAgain &ndash;</span> A non-profit organization and consortium of leading laboratories, biotech companies and patient advocacy organizations.</p>
+                    <p><span class="carousel-title">CureMap &ndash;</span> An interactive map that aggregates, curates and presents current human clinical trials for spinal cord injury</p>
                 </div>
                 <ol class="carousel-select">
-                    <li><a href="#" class="carousel-current">1</a></li>
-                    <li><a href="#">2</a></li>
-                    <li><a href="#">3</a></li>
+                    <li><a href="#" class="carousel-current"></a></li>
+                    <li><a href="#"></a></li>
+                    <li><a href="#"></a></li>
+                    <li><a href="#"></a></li>
+                    <li><a href="#"></a></li>
                 </ol>
             </div>
         </div>
