--- a/work.html
+++ b/work.html
@@ -79,7 +79,7 @@
         <div class="container">
             <h2>Bella Surfaces LLC</h2>
             <p>Bella Surfaces LLC has over 20 years of combined experience in installing custom surfaces in kitchens, bathrooms, fireplaces, playrooms and commercial facilities throughout the New England area.</p>
-            <a href="#" class="btn">Find out more <span class="btn-arrow"></span></a>
+            <a href="work/bellasurfaces.html" class="btn">Find out more <span class="btn-arrow"></span></a>
             <img src="assets/work-bella.png" style="max-width:970px" />
         </div>
     </section>
@@ -88,7 +88,7 @@
         <div class="container">
             <h2>Dreamachine</h2>
             <p>Dreamachine is a meditative device that modulates brain rhythms through light stimulation.<br> It is a mobile & desktop javascript app.</p>
-            <a href="#" class="btn">Find out more <span class="btn-arrow"></span></a>
+            <a href="work/dreamachine.html" class="btn">Find out more <span class="btn-arrow"></span></a>
             <img src="assets/work-dream.png" style="max-width:1065px"  />
         </div>
     </section>
@@ -97,8 +97,26 @@
         <div class="container">
             <h2>ArtBeyond</h2>
             <p>ArtBeyond is an ongoing art exhibit that displays curated work online and in galleries.<br> ArtBeyond explores the concept of healing in contemporary art.</p>
-            <a href="#" class="btn">Find out more <span class="btn-arrow"></span></a>
+            <a href="work/artbeyond.html" class="btn">Find out more <span class="btn-arrow"></span></a>
             <img src="assets/work-artbeyond.png" style="max-width:970px"  />
+        </div>
+    </section>
+
+    <section class="inbetween no-bottom work-item">
+        <div class="container">
+            <h2>Massachusetts Walks Again</h2>
+            <p>Walks Again is a non-profit organization dedicated to increasing state-based <br/> research funds through patient led lobbying initiatives.</p>
+            <a href="work/walksagain.html" class="btn">Find out more <span class="btn-arrow"></span></a>
+            <img src="assets/work-walksagain.png" style="max-width:970px"  />
+        </div>
+    </section>
+
+    <section class="boxed no-bottom work-item">
+        <div class="container">
+            <h2>CureMap</h2>
+            <p>CureMap's goal is to provide an easy to use interface that encourages users <br/> to learn about approved human trials derived from <a href="http://clinicaltrials.gov/">clinicaltrials.gov</a></p>
+            <a href="work/curemap.html" class="btn">Find out more <span class="btn-arrow"></span></a>
+            <img src="assets/work-curemap.png" style="max-width:1056px"  />
         </div>
     </section>
 
