Add share menu and quote

--- a/work.html
+++ b/work.html
@@ -55,6 +55,11 @@
             <a href="#" class="nav-toggle"></a>
             <a href="index.html" class="logo">Animal<span>57</span></a>
             <a href="#" class="share">Share</a>
+            <ul class="share-list">
+                <li><a class="share-facebook" href="https://www.facebook.com/sharer/sharer.php?u=http://animal57.co"></a></li>
+                <li><a class="share-twitter" href="https://twitter.com/intent/tweet?url=http://animal57.co&text=Animal57"></a></li>
+                <li><a class="share-gplus" href="https://plus.google.com/share?url=http://animal57.co"></a></li>
+            </ul>
             <nav>
                 <ul>
                     <li><a href="about.html">About Us</a></li>
