--- a/index.html
+++ b/index.html
@@ -38,6 +38,11 @@
             <a href="#" class="nav-toggle"></a>
             <a href="index.html" class="logo">Animal<span>57</span></a>
             <a href="#" class="share">Share</a>
+            <ul class="share-list">
+                <li><a class="share-facebook" href="https://www.facebook.com/sharer/sharer.php?u=http://animal57.co"></a></li>
+                <li><a class="share-twitter" href="https://twitter.com/intent/tweet?url=http://animal57.co&text=Animal57"></a></li>
+                <li><a class="share-gplus" href="https://plus.google.com/share?url=http://animal57.co"></a></li>
+            </ul>
             <nav>
                 <ul>
                     <li><a href="about.html">About Us</a></li>
@@ -196,6 +201,10 @@
                     <div>
                         <blockquote>Charlie was very easy to work with throughout the design process. Before, during and after the project was completed Mr. Southard was always available to provide great customer service for us.</blockquote>
                         <cite>Adam Kersnowski &ndash; Model Masonry</cite>
+                    </div>
+                    <div>
+                        <blockquote>Charlie at Animal57 does a great job! He's always very easy to reach for questions or updating and provides a professional service.</blockquote>
+                        <cite>Jack Knisely &ndash; JK Knisley Landscaping</cite>
                     </div>
                     <div>
                         <blockquote>It is always a pleasure to work with Charlie on our projects. He focuses on the purpose of the project and translates that into an attractive and functional website. Working with Charlie is a true partnership and a very rewarding experience.</blockquote>
