Update footer and analytics

--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
             </div>
             <div class="contact">
                 <a href="mailto:animal57co@gmail.com" class="btn">Contact Us</a>
-                <p>24 Monument St., Wenham, MA 01984</p>
+                <p>24 Monument St. Wenham, MA 01984</p>
                 <p>
                     <span>Phone: (978) 491.0046</span>
                     <span>Fax: (978) 887.1099</span>
