--- a/work/artbeyond.html
+++ b/work/artbeyond.html
@@ -115,7 +115,7 @@
             </div>
             <div class="contact">
                 <a href="mailto:animal57co@gmail.com" class="btn">Contact Us</a>
-                <p>24 Monument St., Wenham, MA 01984</p>
+                <p>24 Monument St. Wenham, MA 01984</p>
                 <p>
                     <span>Phone: (978) 491.0046</span>
                     <span>Fax: (978) 887.1099</span>
@@ -150,5 +150,15 @@
             });
         });
     </script>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-122987123-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-122987123-1');
+    </script>
+
 </body>
 </html>
