Remove html from links

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <header id="site-header">
         <div class="container">
             <a href="#" class="nav-toggle"></a>
-            <a href="index.html" class="logo">Animal<span>57</span></a>
+            <a href="index" class="logo">Animal<span>57</span></a>
             <a href="#" class="share">Share</a>
             <ul class="share-list">
                 <li><a class="share-facebook" href="https://www.facebook.com/sharer/sharer.php?u=http://animal57.co"></a></li>
@@ -45,9 +45,9 @@
             </ul>
             <nav>
                 <ul>
-                    <li><a href="about.html">About Us</a></li>
-                    <li><a href="services.html">Services</a></li>
-                    <li><a href="work.html">Our Work</a></li>
+                    <li><a href="about">About Us</a></li>
+                    <li><a href="services">Services</a></li>
+                    <li><a href="work">Our Work</a></li>
                     <!--<li><a href="#">Blog</a></li>-->
                     <li><a href="mailto:animal57co@gmail">Contact</a></li>
                 </ul>
@@ -63,8 +63,8 @@
             </h1>
             <p class="subtitle">Animal57 is an Interactive Software, Web Design and Consulting Group.</p>
             <div class="buttons">
-                <a href="work.html" class="btn">Our Work</a>
-                <a href="services.html" class="btn">Services</a>
+                <a href="work" class="btn">Our Work</a>
+                <a href="services" class="btn">Services</a>
             </div>
         </div>
     </section>
@@ -77,7 +77,7 @@
                     Our work
                 </h2>
                 <p>Selected projects from companies and individuals across multiple industries.</p>
-                <a href="work.html" class="btn">View All <span class="btn-arrow"></span></a>
+                <a href="work" class="btn">View All <span class="btn-arrow"></span></a>
             </div>
 
             <div class="carousel">
@@ -156,7 +156,7 @@
                     <p>Every line of code crafted to perfection, optimized for fast performance and easy to edit.</p>
                 </li>
             </ul>
-            <a href="services.html" class="btn">Find Out More <span class="btn-arrow"></span></a>
+            <a href="services" class="btn">Find Out More <span class="btn-arrow"></span></a>
         </div>
     </section>
 
@@ -173,7 +173,7 @@
                 <p>Animal57 is a small digital team of agile artists, builders and designers. We know a fancy website will only get you so far. If the needle isn't moving, it's all for naught. Your needs will be first and become before our desire to impress. When your goals are successful - we are sucessful.</p>
                 <p>The Founder Charlie Southard brings together over a decade of user experience projects in a multitude of leadership, project management, and startup insight driven solutions!</p>
                 <p>The Boston area native and graduate of University of New Hampshire, Boston University and Lesley University, Charlie is an accomplished communicator, storyteller, artist and strategist. Charlie also dislikes writing in the third person and prefers short and sweet. Whenever possible industry jargon will be reworded to explain complex problems in a simple and humanizing way.</p>
-                <a href="about.html" class="btn">More About Us <span class="btn-arrow"></span></a>
+                <a href="about" class="btn">More About Us <span class="btn-arrow"></span></a>
             </div>
         </div>
     </section>
