--- a/services.html
+++ b/services.html
@@ -105,7 +105,7 @@
     <header id="site-header">
         <div class="container">
             <a href="#" class="nav-toggle"></a>
-            <a href="index.html" class="logo">Animal<span>57</span></a>
+            <a href="index" class="logo">Animal<span>57</span></a>
             <a href="#" class="share">Share</a>
             <ul class="share-list">
                 <li><a class="share-facebook" href="https://www.facebook.com/sharer/sharer.php?u=http://animal57.co"></a></li>
@@ -114,9 +114,9 @@
             </ul>
             <nav>
                 <ul>
-                    <li><a href="about.html">About Us</a></li>
-                    <li class="current"><a href="services.html">Services</a></li>
-                    <li><a href="work.html">Our Work</a></li>
+                    <li><a href="about">About Us</a></li>
+                    <li class="current"><a href="services">Services</a></li>
+                    <li><a href="work">Our Work</a></li>
                     <!--<li><a href="#">Blog</a></li>-->
                     <li><a href="mailto:animal57co@gmail">Contact</a></li>
                 </ul>
