--- a/work.html
+++ b/work.html
@@ -53,7 +53,7 @@
     <header id="site-header">
         <div class="container">
             <a href="#" class="nav-toggle"></a>
-            <a href="index.html" class="logo">Animal<span>57</span></a>
+            <a href="index" class="logo">Animal<span>57</span></a>
             <a href="#" class="share">Share</a>
             <ul class="share-list">
                 <li><a class="share-facebook" href="https://www.facebook.com/sharer/sharer.php?u=http://animal57.co"></a></li>
@@ -62,9 +62,9 @@
             </ul>
             <nav>
                 <ul>
-                    <li><a href="about.html">About Us</a></li>
-                    <li><a href="services.html">Services</a></li>
-                    <li class="current"><a href="work.html">Our Work</a></li>
+                    <li><a href="about">About Us</a></li>
+                    <li><a href="services">Services</a></li>
+                    <li class="current"><a href="work">Our Work</a></li>
                     <!--<li><a href="#">Blog</a></li>-->
                     <li><a href="mailto:animal57co@gmail">Contact</a></li>
                 </ul>
@@ -84,7 +84,7 @@
         <div class="container">
             <h2>Bella Surfaces LLC</h2>
             <p>Bella Surfaces LLC has over 20 years of combined experience in installing custom surfaces in kitchens, bathrooms, fireplaces, playrooms and commercial facilities throughout the New England area.</p>
-            <a href="work/bellasurfaces.html" class="btn">Find out more <span class="btn-arrow"></span></a>
+            <a href="work/bellasurfaces" class="btn">Find out more <span class="btn-arrow"></span></a>
             <img src="assets/work-bella.png" style="max-width:970px" />
         </div>
     </section>
@@ -93,7 +93,7 @@
         <div class="container">
             <h2>Dreamachine</h2>
             <p>Dreamachine is a meditative device that modulates brain rhythms through light stimulation.<br> It is a mobile & desktop javascript app.</p>
-            <a href="work/dreamachine.html" class="btn">Find out more <span class="btn-arrow"></span></a>
+            <a href="work/dreamachine" class="btn">Find out more <span class="btn-arrow"></span></a>
             <img src="assets/work-dream.png" style="max-width:1065px"  />
         </div>
     </section>
@@ -102,7 +102,7 @@
         <div class="container">
             <h2>ArtBeyond</h2>
             <p>ArtBeyond is an ongoing art exhibit that displays curated work online and in galleries.<br> ArtBeyond explores the concept of healing in contemporary art.</p>
-            <a href="work/artbeyond.html" class="btn">Find out more <span class="btn-arrow"></span></a>
+            <a href="work/artbeyond" class="btn">Find out more <span class="btn-arrow"></span></a>
             <img src="assets/work-artbeyond.png" style="max-width:970px"  />
         </div>
     </section>
@@ -111,7 +111,7 @@
         <div class="container">
             <h2>Massachusetts Walks Again</h2>
             <p>Walks Again is a non-profit organization dedicated to increasing state-based <br/> research funds through patient led lobbying initiatives.</p>
-            <a href="work/walksagain.html" class="btn">Find out more <span class="btn-arrow"></span></a>
+            <a href="work/walksagain" class="btn">Find out more <span class="btn-arrow"></span></a>
             <img src="assets/work-walksagain.png" style="max-width:970px"  />
         </div>
     </section>
@@ -120,7 +120,7 @@
         <div class="container">
             <h2>CureMap</h2>
             <p>CureMap's goal is to provide an easy to use interface that encourages users <br/> to learn about approved human trials derived from <a href="http://clinicaltrials.gov/">clinicaltrials.gov</a></p>
-            <a href="work/curemap.html" class="btn">Find out more <span class="btn-arrow"></span></a>
+            <a href="work/curemap" class="btn">Find out more <span class="btn-arrow"></span></a>
             <img src="assets/work-curemap.png" style="max-width:1056px"  />
         </div>
     </section>
