Add new work items and quotes

--- a/index.html
+++ b/index.html
@@ -90,26 +90,21 @@
                         <img src="assets/carousel-bella.png" />
                     </div>
                     <div class="carousel-slide">
-                        <img src="assets/carousel-artbeyond.png" />
+                        <img src="assets/carousel-neurorecovery.png" />
                     </div>
                     <div class="carousel-slide">
                         <img src="assets/carousel-walksagain.png" />
-                    </div>
-                    <div class="carousel-slide">
-                        <img src="assets/carousel-curemap.png" />
                     </div>
                     <a href="#" class="carousel-next"></a>
                 </div>
                 <div class="carousel-desc">
                     <p class="carousel-current"><span class="carousel-title">DreaMachine &ndash;</span> Access relaxed states of mind, creativity and even hallucinatory states.</p>
                     <p><span class="carousel-title">Bella Surfaces &ndash;</span> Over 20 years combined experience installing custom surfaces.</p>
-                    <p><span class="carousel-title">ArtBeyond &ndash;</span> An ongoing art exhibit that displays curated work online and in galleries.</p>
+                    <p><span class="carousel-title">NeuroRecovery Technologies &ndash;</span> A medical device company that develops innovative therapeutic systems for indivduals suffering from paralysis.</p>
                     <p><span class="carousel-title">MassWalksAgain &ndash;</span> A non-profit organization and consortium of leading laboratories, biotech companies and patient advocacy organizations.</p>
-                    <p><span class="carousel-title">CureMap &ndash;</span> An interactive map that aggregates, curates and presents current human clinical trials for spinal cord injury</p>
                 </div>
                 <ol class="carousel-select">
                     <li><a href="#" class="carousel-current"></a></li>
-                    <li><a href="#"></a></li>
                     <li><a href="#"></a></li>
                     <li><a href="#"></a></li>
                     <li><a href="#"></a></li>
@@ -195,11 +190,11 @@
                         <cite>Eric Ruby, M.D., F.A.A.P. &ndash; MassWalksAgain</cite>
                     </div>
                     <div>
-                        <blockquote>Mr. Southard tackled what was, for me, an overwhelming project by juggling immediate Web creation needs with his strong desire and ability to organize, design, and update my site. Another key success measure the ability to communicate well &ndash; our email and phone conversations were thoughtful and thorough. I always felt &ndash; and continue to feel &ndash; that Charlie's enthusiasm for me and my work shines through.</blockquote>
+                        <blockquote>Charlie tackled what was, for me, an overwhelming project by juggling immediate Web creation needs with his strong desire and ability to organize, design, and update my site. Another key success measure the ability to communicate well &ndash; our email and phone conversations were thoughtful and thorough. I always felt &ndash; and continue to feel &ndash; that Charlie's enthusiasm for me and my work shines through.</blockquote>
                         <cite>J. Freedman &ndash; Uncle J's Monsters</cite>
                     </div>
                     <div>
-                        <blockquote>Charlie was very easy to work with throughout the design process. Before, during and after the project was completed Mr. Southard was always available to provide great customer service for us.</blockquote>
+                        <blockquote>Charlie was very easy to work with throughout the design process. Before, during and after the project was completed, Charlie was always available to provide great customer service for us.</blockquote>
                         <cite>Adam Kersnowski &ndash; Model Masonry</cite>
                     </div>
                     <div>
@@ -209,6 +204,10 @@
                     <div>
                         <blockquote>It is always a pleasure to work with Charlie on our projects. He focuses on the purpose of the project and translates that into an attractive and functional website. Working with Charlie is a true partnership and a very rewarding experience.</blockquote>
                         <cite>Rutgers University &ndash; W. M. Keck Center</cite>
+                    </div>
+                    <div>
+                        <blockquote>Charlie was a life savor, he came in and, working within our limited start-up budget, re-engineered our site to give it the professional look we needed. He has maintained the integrity of our site ever since, providing us with uninterrupted service.</blockquote>
+                        <cite>Dr. Nick Terrafanca &ndash; NeuroRecoveries Inc.</cite>
                     </div>
                 </div>
             </div>
