--- a/work.html
+++ b/work.html
@@ -84,7 +84,7 @@
         <div class="container">
             <h2>Bella Surfaces LLC</h2>
             <p>Bella Surfaces LLC has over 20 years of combined experience in installing custom surfaces in kitchens, bathrooms, fireplaces, playrooms and commercial facilities throughout the New England area.</p>
-            <a href="work/bellasurfaces" class="btn">Find out more <span class="btn-arrow"></span></a>
+            <a href="work/bella-surfaces" class="btn">Find out more <span class="btn-arrow"></span></a>
             <img src="assets/work-bella.png" style="max-width:970px" />
         </div>
     </section>
@@ -109,19 +109,55 @@
 
     <section class="inbetween no-bottom work-item">
         <div class="container">
-            <h2>Massachusetts Walks Again</h2>
-            <p>Walks Again is a non-profit organization dedicated to increasing state-based <br/> research funds through patient led lobbying initiatives.</p>
-            <a href="work/walksagain" class="btn">Find out more <span class="btn-arrow"></span></a>
-            <img src="assets/work-walksagain.png" style="max-width:970px"  />
+            <h2>NeuroRecovery Technologies</h2>
+            <p>NeuroRecovery Technologies is a medical device company that develops innovative therapeutic systems for indivduals suffering from paralysis.</p>
+            <a href="work/neuro-recovery-tech" class="btn">Find out more <span class="btn-arrow"></span></a>
+            <img src="assets/work-neurorecovery.png" style="max-width:970px"  />
         </div>
     </section>
 
     <section class="boxed no-bottom work-item">
         <div class="container">
+            <h2>Massachusetts Walks Again</h2>
+            <p>Walks Again is a non-profit organization dedicated to increasing state-based <br/> research funds through patient led lobbying initiatives.</p>
+            <a href="work/mass-walks-again" class="btn">Find out more <span class="btn-arrow"></span></a>
+            <img src="assets/work-walksagain.png" style="max-width:970px"  />
+        </div>
+    </section>
+
+    <section class="inbetween no-bottom work-item">
+        <div class="container">
             <h2>CureMap</h2>
             <p>CureMap's goal is to provide an easy to use interface that encourages users <br/> to learn about approved human trials derived from <a href="http://clinicaltrials.gov/">clinicaltrials.gov</a></p>
             <a href="work/curemap" class="btn">Find out more <span class="btn-arrow"></span></a>
             <img src="assets/work-curemap.png" style="max-width:1056px"  />
+        </div>
+    </section>
+
+    <section class="boxed no-bottom work-item">
+        <div class="container">
+            <h2>The Country Carpenter</h2>
+            <p>The Country Carpenter Remodeling Company is a full-service build/design company. The Country Carpenter specializes in custom kitchens, baths and additions.</p>
+            <a href="work/country-carpenter" class="btn">Find out more <span class="btn-arrow"></span></a>
+            <img src="assets/work-countrycarpenter.png" style="max-width:1056px"  />
+        </div>
+    </section>
+
+    <section class="inbetween no-bottom work-item">
+        <div class="container">
+            <h2>Jack Knisely Landscaping</h2>
+            <p>Jack Knisely Landscaping offers a wide variety of landscape construction services from new lawn construction to stone walls and patio installation.</p>
+            <a href="work/knisely-landscaping" class="btn">Find out more <span class="btn-arrow"></span></a>
+            <img src="assets/work-jklandscaping.png" style="max-width:1056px"  />
+        </div>
+    </section>
+
+    <section class="boxed no-bottom work-item">
+        <div class="container">
+            <h2>Theraplant</h2>
+            <p>Theraplant is a laboratory dedicated to empowering patients with the highest quality medical cannabis in the world.</p>
+            <a href="work/theraplant" class="btn">Find out more <span class="btn-arrow"></span></a>
+            <img src="assets/work-theraplant.png" style="max-width:1056px"  />
         </div>
     </section>
 
