--- a/about.html
+++ b/about.html
@@ -56,8 +56,13 @@
             padding: 90px 0 60px;
         }
         .about-trust .logos li {
-            width: 25%;
+            padding: 0 30px;
             margin-bottom: 60px;
+        }
+        @media (max-width: 690px) {
+            .about-trust .logos li {
+                padding: 0 15px;
+            }
         }
     </style>
 </head>
