--- a/work.html
+++ b/work.html
@@ -82,7 +82,7 @@
 
     <section class="boxed no-bottom work-item">
         <div class="container">
-            <h2>Bella Surfaces LLC</h2>
+            <h2>Bella Surfaces</h2>
             <p>Bella Surfaces LLC has over 20 years of combined experience in installing custom surfaces in kitchens, bathrooms, fireplaces, playrooms and commercial facilities throughout the New England area.</p>
             <a href="work/bella-surfaces" class="btn">Find out more <span class="btn-arrow"></span></a>
             <img src="assets/work-bella.png" style="max-width:970px" />
@@ -155,7 +155,7 @@
     <section class="boxed no-bottom work-item">
         <div class="container">
             <h2>Theraplant</h2>
-            <p>Theraplant is a laboratory dedicated to empowering patients with the highest quality medical cannabis in the world.</p>
+            <p>Theraplant LLC is a laboratory dedicated to empowering patients with the highest quality medical cannabis in the world.</p>
             <a href="work/theraplant" class="btn">Find out more <span class="btn-arrow"></span></a>
             <img src="assets/work-theraplant.png" style="max-width:1056px"  />
         </div>
