--- a/work/theraplant.html
+++ b/work/theraplant.html
@@ -102,7 +102,7 @@
     <section class="inbetween no-bottom work-inner-primary">
         <div class="container">
             <h1>Theraplant</h1>
-            <p><span class="color-primary">Theraplant</span> is a laboratory dedicated to empowering patients with the highest quality medical cannabis in the world. The custom-designed web development incorporates multiple third-party integrations from mailchimp, internal survey forms, categorized custom news section and easy to read and access frequently asked questions.</p>
+            <p><span class="color-primary">Theraplant LLC</span> is a laboratory dedicated to empowering patients with the highest quality medical cannabis in the world. The custom-designed web development incorporates multiple third-party integrations from mailchimp, internal survey forms, categorized custom news section and easy to read and access frequently asked questions.</p>
             <img src="assets/theraplant-primary.png" />
         </div>
     </section>
